option java_package = "com.thanple.gs.common.nio.protocol";
option java_outer_classname="_SAddCharacter";

message SAddCharacter {

  message CharacterItem {
	  required int32 id = 1;
	  required int32 hair = 2;
	  required int32 body = 3;
	  required int32 weapon = 4;
  }

   repeated CharacterItem characters = 1;

}