option java_package = "com.thanple.gs.common.nio.protocol";
option java_outer_classname="_SRequestUserInfo";

message SRequestUserInfo {
  required string name = 1;
  required int32 id = 2;
  required string number = 3;
  required int32 hair = 4;
  required int32 body = 5;
  required int32 weapon = 6;

  required int32 money = 7;
  required int32 nskill = 8;
  required int32 exp = 9;
}